--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,16 @@
   border-left: 3px solid #ebbd5b;
 }
 
+/* Tiện ích ẩn thanh cuộn */
+.no-scrollbar::-webkit-scrollbar {
+    display: none; /* Dành cho Chrome, Safari, Edge */
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none;  /* Dành cho Internet Explorer 10+ */
+    scrollbar-width: none;  /* Dành cho Firefox */
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
